--- a/Day01/index.html
+++ b/Day01/index.html
@@ -4,7 +4,7 @@
     <meta charset='utf-8'>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
 
-    <title>Em Camadas</title>
+    <title>Layered Social Medias</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
