--- a/Day01/index.html
+++ b/Day01/index.html
@@ -32,18 +32,18 @@
             </a>
         </li>
         <li>
-            <a href="#">
+            <a href="https://github.com/DanielSoaress">
                 <span></span>
                 <span></span>
                 <span></span>
                 <span></span>
-                <span class="fa fa-google-plus" aria-hidden="true">
-                    <img src="assets/google-plus.png" height="40" width="40" alt="google-plus">
+                <span class="fa fa-github" aria-hidden="true">
+                    <img src="assets/github.png" height="40" width="40" alt="google-plus">
                 </span>
             </a>
         </li>
         <li>
-            <a href="#">
+            <a href="https://www.linkedin.com/in/daniel-soares-26b718145/">
                 <span></span>
                 <span></span>
                 <span></span>
@@ -54,7 +54,7 @@
             </a>
         </li>
         <li>
-            <a href="#">
+            <a href="https://www.instagram.com/lost_dsf/">
                 <span></span>
                 <span></span>
                 <span></span>
